--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
-    <title>CRUD FROM firebase</title>
+    <script type='text/javascript' src='config.js'></script>
+    <title>Terarium</title>
 
     <link href="style.css" rel="stylesheet">
   </head>
@@ -91,6 +91,7 @@
         appId: "1:169115460005:web:bb6bb97390a9a253b0884c",
         measurementId: "G-WH1MB7G0TH"
       };
+
 
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
