--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: key,
+      apiKey: "",
       authDomain: "terarium-aca4d.firebaseapp.com",
       databaseURL: "https://terarium-aca4d-default-rtdb.firebaseio.com",
       projectId: "terarium-aca4d",
